--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "expressjs-tutorial",
   "version": "1.0.0",
-  "description": "",
+  "description": "npm install -g express",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/arkadi81/expressjs-tutorial#readme",
   "dependencies": {
+    "ejs": "^2.5.6",
     "express": "^4.14.1"
-  }
+  },
+  "devDependencies": {}
 }
